<resources>
    <string name="app_name">SmartFind</string>
    <string name="common_notify">Thông báo</string>
    <string name="common_close">Đóng</string>
    <string name="common_cancel">Hủy</string>
    <string name="common_accept">Đồng ý</string>
    <string name="common_error_no_internet">Không có Internet</string>
    <string name="tv_category">Thể loại</string>
    <string name="btn_pairing">Ở ghép</string>
    <string name="btn_rental_hous">Nhà trọ</string>
    <string name="btn_apartment">Chung cư</string>
    <string name="btn_whole_house">Nguyên căn</string>
    <string name="tv_infor">Thông tin</string>
    <string name="tv_login">Đăng nhập</string>
    <string name="tv_registrer">Đăng ký</string>
    <string name="tv_amount_room">Số lượng phòng:</string>
    <string name="tv_amount_person">Số người</string>
    <string name="tv_price">Giá / Tháng: </string>
    <string name="tv_deposit">Đặt cọc</string>
    <string name="tv_gender">Giới tính:</string>
    <string name="tv_electricity_bill">Tiền điện / Tháng:</string>
    <string name="tv_water_bill">Tiền nước / Tháng:</string>
    <string name="btn_continue">Tiếp tục</string>
    <string name="tv_address">Địa chỉ</string>
    <string name="tv_province">Tỉnh/Thành phố </string>
    <string name="tv_district">Huyện/Thị xã </string>
    <string name="tv_commune">Xã/Phường/Thị trấn </string>
    <string name="tv_detail_address">Địa chỉ chi tiết </string>
    <string name="tv_utilities">Tiện ích</string>
    <string name="tv_wc">Vệ sinh</string>
    <string name="tv_bathroom">Nhà tắm</string>
    <string name="tv_parking">Chỗ để xe </string>
    <string name="tv_pet">Được nuôi thú</string>
    <string name="tv_wifi">Wifi</string>
    <string name="tv_security">An ninh</string>
    <string name="tv_kitchen">Nhà ăn</string>
    <string name="tv_baby">Được nuôi trẻ</string>
    <string name="tv_key">khoá riêng</string>
    <string name="tv_time">thoải mái giờ </string>
    <string name="tv_air_conditioner">Điều hoà </string>
    <string name="tv_bed">Giường </string>
    <string name="tv_detailed_description">Mô tả chi tiết: </string>
    <string name="btn_post">Đăng</string>
    <string name="tv_male">Nam</string>
    <string name="tv_female">Nữ</string>
    <string name="tv_all">Tất cả</string>
    <string name="tv_both">Cả 2</string>
    <string name="tv_confirm">Xác nhận</string>
    <string name="tv_dang_nhap">Đăng nhập</string>
    <string name="tv_dang_ky">Đăng ký</string>
    <string name="text_infor_name">Nguyễn Văn Quân</string>
    <string name="text_infor_time">1 Giờ</string>
    <string name="text_infor_title">Nhà trọ mới xây ngày hôm qua đây các bạn ạ. Ai thuê thì alo cho Mình nha.</string>
    <string name="text_infor_price">GIÁ PHÒNG:</string>
    <string name="text_infor_location">Vị trí:</string>
    <string name="text_infor_gender">Giới tính:</string>
    <string name="text_infor_quantity">Số lượng:</string>
    <string name="text_infor_price_electric">Tiền điện</string>
    <string name="text_infor_price_water">Tiền nước</string>
    <string name="text_infor_utilities">Tiện ích:</string>
    <string name="text_infor_chat">Nhắn tin</string>
    <string name="text_infor_call">Gọi điện</string>
    <string name="setting_infor_user">Thông tin cá nhân</string>
    <string name="setting_change_pass">Đổi mật khẩu</string>
    <string name="setting_permission">Quyền truy cập</string>
    <string name="change_pass_old">Mật khẩu cũ</string>
    <string name="change_pass_new">Mật khẩu mới</string>
    <string name="text_change">Thay đổi</string>
    <string name="change_pass_confirm">Xác nhân mật khẩu mới</string>
    <string name="user_permission_camera">Máy ảnh</string>
    <string name="user_permission_mic">Mic</string>
    <string name="user_permission_internet">Mạng cục bộ</string>
    <string name="setting_confirm_account">Xác thực tài khoản</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_notification">Thông báo</string>
    <string name="str_user">Người dùng</string>
    <string name="setting">Cài đặt</string>
    <string name="rules">Điều khoản</string>
    <string name="asistent_and_feedback">Trợ giúp và phản hồi</string>
    <string name="log_out">Đăng xuất</string>
    <string name="account">Tên tài khoản</string>
    <string name="change">thay đổi</string>
    <string name="Name">Họ và tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="email">Thư điện thử</string>
    <string name="avatar">Ảnh đại diện</string>
    <string name="change_">Thay đổi</string>
    <string name="name_uesr">Nguyễn Minh Hiếu</string>
    <string name="title_layout">Trang cá nhân</string>
    <string name="user_image">User image</string>
    <string name="content_layout">Quản lí hồ sơ cá nhân, bảo mật</string>
    <string name="content_layout1">Điều khoản người dùng và ứng dụng</string>
    <string name="contact">Mọi vấn đề xin liên hệ với chúng tôi</string>
    <string name="evaluate">Đánh giá ứng dụng</string>
    <string name="hotline">Hotline</string>
    <string name="str_rateing_app">Đánh giá ứng dụng</string>
    <string name="str_mail">Mail</string>
    <string name="hongthai2">Phạm Hồng Thái</string>
    <string name="hired">Chuyển sang đã cho thuê</string>
    <string name="comment">Nhà trọ mới đây các bạn bạn</string>
    <string name="price">5.000.000</string>
    <string name="cancel">Hủy</string>
    <string name="edit">Sửa</string>
    <string name="str_userName">Phạm Hồng Thái</string>
    <string name="time">1 giờ</string>
    <string name="str_status">Chuyển sang đã cho thuê</string>
    <string name="str_location">Tràng tiền, Hoàn Kiếm, Hà Nội</string>
    <string name="str_price_to_rent">50.000.000</string>
    <string name="cancel2">Hủy</string>
    <string name="edit2">Sửa</string>
    <string name="tv_username">Họ và tên</string>
    <string name="tv_telephone_number">Số điện thoại</string>
    <string name="tv_id_card">Số CMND</string>
    <string name="btn_change">Thay đổi</string>
    <string name="btn_not_hire">Chưa thuê</string>
    <string name="btn_pending">Chưa duyệt</string>
    <string name="btn_approved">Đã duyệt</string>
    <string name="btn_delete">Xóa</string>
    <string name="btn_edit">Sửa</string>
    <string name="tv_type">Loại</string>
    <string name="tv_date">Ngày sinh</string>
    <string name="tv_home_town">Nguyên Quán</string>
    <string name="tv_address_now">Địa chỉ thường trú</string>
    <string name="btn_confirm">Xác thực</string>
    <string name="tv_status">Không có bài viết nào</string>
    <string name="tv_total_people">Nhập số người đã thuê</string>
    <string name="home_postBtn">Đăng bài ngay ...</string>
    <string name="home_highlightTv">Nổi bật</string>
    <string name="home_rentalRoomBtn">Cho thuê</string>
    <string name="home_shareRoomBtn">Ở ghép</string>
    <string name="slArea_welcomeTv">Welcome to Smart Find</string>
    <string name="slArea_titleTv">Chọn khu vực</string>
    <string name="slArea_selectAreaBtn">Tiếp tục</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_category_empty">Bạn phải chọn một thể loại phòng</string>
    <string name="text_gender_empty">Bạn phải chọn giới tính</string>
    <string name="text_infor_error_empty">Bạn hãy điền đầy đủ thông tin số người, giá tiền, tiền cọc, tiền điện, tiền nước</string>
    <string name="services_not_avail">Dịch vụ không sẵn sàng, vui lòng thử lại sau</string>
    <string name="error_edt_dont_match">Không khớp</string>
    <string name="add_images">Thêm ảnh</string>
    <string-array name="type_id_card_array">
        <item>Căn cước công dân</item>
        <item>Chứng minh nhân dân 9 số</item>
        <item>Chứng minh nhân dân 12 số</item>

    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="msg_đinhanh">Tài khoản của Bạn chưa được định danh để sử dụng chức năng này. Vui lòng vào mục "Cá nhân" -> "Cài đặt" -> "Định danh tài khoản", định danh tài khoản của mình để có trải nghiệp tốt nhất</string>
    <string name="facebook_app_id">176696500819373</string>
    <string name="fb_login_protocol_scheme">fb176696500819373</string>
    <string name="face_not_found">Không tìm thấy mặt</string>
    <string name="face_multiple">Nhiều khuôn mặt được phát hiện.</string>
    <string name="face_too_small">Mặt quá nhỏ.</string>
    <string name="face_too_large">Mặt quá to.</string>
    <string name="face_out_of_rect">Mặt đã ra khỏi hộp.</string>
    <string name="liveness_detection_neutral">Vui lòng nhìn thẳng</string>
    <string name="liveness_detection_face_left">Vui lòng quay mặt sang trái</string>
    <string name="liveness_detection_face_right">Vui lòng quay mặt sang phải</string>
    <string name="liveness_detection_face_smile">Vui lòng cười</string>
    <string name="liveness_detection_face_up">Vui lòng ngẩng mặt lên</string>
    <string name="liveness_detection_face_down">Vui lòng cúi mặt xuống</string>
    <string name="liveness_detection_blink_left">Vui lòng nháy mắt trái</string>
    <string name="liveness_detection_blink_right">Vui lòng nháy mắt phải</string>
    <string name="liveness_detection_face_incline_left">Vui lòng nghiêng đầu sang trái</string>
    <string name="liveness_detection_face_incline_right">Vui lòng nghiêng đầu sang phải</string>
    <string name="linveness_detection_close_eye">Vui lòng nhắm mắt</string>
    <string name="pl_login">Vui lòng đăng nhập để có thể sử dụng chức năng này</string>
    <string name="warning">Cảnh báo</string>
    <string name="camera_open_setting">Để sử dụng máy ảnh, vui lòng vào Cài đặt của điện thoại và cấp quyền truy cập máy ảnh cho ứng dụng</string>
    <string name="contact_open_setting_text">Mở cài đặt</string>
    <string name="close">Đóng</string>
</resources>