<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="information"
            type="String" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        tools:context=".ui.Informations">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtAccount"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_circle_editext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/Name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_circle_editext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/phone_number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPhoneNumer"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_circle_editext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/address"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_circle_editext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/email"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_circle_editext" />

        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/avatar"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_circle_editext" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toBottomOf="@+id/tvHotlineTitle"
            android:background="@drawable/bg_blue_round_15_selector"
            android:text="@string/change_"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginTop="120dp"/>
    </LinearLayout>
</layout>