<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.poly.smartfindpro.ui.post.adressPost.AddressPostPresenter" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp">

            <TextView
                style="@style/textStyleBoldBlack_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_address">

            </TextView>


            <TextView
                style="@style/textStyleNormal_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_province"
                android:textColor="@color/black">

            </TextView>

            <Spinner
                android:id="@+id/spnProvince"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/border_spinner"
                android:prompt="@string/app_name" />


            <TextView
                style="@style/textStyleNormal_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_district"
                android:textColor="@color/black">

            </TextView>

            <Spinner
                android:id="@+id/spnDistrict"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/border_spinner"
                android:prompt="@string/app_name" />

            <TextView
                style="@style/textStyleNormal_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_commune"
                android:textColor="@color/black">

            </TextView>

            <Spinner
                android:id="@+id/spnComune"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/border_spinner"
                android:prompt="@string/app_name" />

            <TextView
                style="@style/textStyleNormal_15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_detail_address"
                android:textColor="@color/black">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtDetialAdress"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@drawable/bg_circle_editext"
                    android:gravity="start"
                    android:padding="@dimen/_8sdp" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/background_button"
                android:onClick="@{()->presenter.onNext()}"
                android:text="@string/btn_continue"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>

</layout>